修正页面多语言

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,6 +12,8 @@ en:
   label_entry_headers_totle_step: Step
   label_entry_headers_totle: totle
   label_entry_headers_first: Step
+  today: Today
+  tomorrow: Tomorrow
   ago: %{message} ago
 
   date:
