--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -37,34 +37,34 @@ zh:
     distance_in_words:
       half_a_minute: "半分钟"
       less_than_x_seconds:
-        one: "一秒内"
+        one: "1秒内"
         other: "少于 %{count} 秒"
       x_seconds:
-        one: "一秒"
+        one: "1秒"
         other: "%{count} 秒"
       less_than_x_minutes:
-        one: "少于一分钟"
+        one: "少于1分钟"
         other: "少于 %{count} 分钟"
       x_minutes:
-        one: "一分钟"
+        one: "1分钟"
         other: "%{count} 分钟"
       about_x_hours:
-        one: "大约一小时"
+        one: "大约1小时"
         other: "大约 %{count} 小时"
       x_days:
-        one: "一天"
+        one: "1天"
         other: "%{count} 天"
       about_x_months:
-        one: "大约一个月"
+        one: "大约1个月"
         other: "大约 %{count} 个月"
       x_months:
-        one: "一个月"
+        one: "1个月"
         other: "%{count} 个月"
       about_x_years:
-        one: "大约一年"
+        one: "大约1年"
         other: "大约 %{count} 年"
       over_x_years:
-        one: "一年以上"
+        one: "1年以上"
         other: "%{count} 年以上"
       almost_x_years:
         one:   "almost 1 year"
