修正上传头像与个人信息修改功能中存在的BUG

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -129,7 +129,7 @@ en:
         downcase_number: "only lowercase letters and numbers"
         upcase_number: "only uppercase letters and numbers"
         email: "must be email address"
-
+        only_image: "must be image file"
   activemodel:
     errors:
       template:
