--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -200,6 +200,7 @@ zh:
   label_irm_common_logout: 退出系统
   label_irm_common_forgot_password: 忘记密码？
   label_irm_recently_objects: 最近的项目
+  notice_account_locked: 你的帐户已经被锁定,请联系管理员!
   #=========================    end common_controller=======================#
   #=========================    irm menus_controller=======================#  
   label_irm_menu: 菜单
