修正jquery表格插件

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -85,6 +85,7 @@ en:
   created_by: Created by
   created_at: Created at
   status: Status
+  no_data: No data for this entity
   #usual words
   notice_account_invalid_creditentials: User or Password Error
   successfully_updated: Successfully Updated
