修正业务对像,修正filter生成的sql

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -86,6 +86,7 @@ en:
   created_at: Created at
   status: Status
   no_data: No data for this entity
+  label_alias: " Alias"
   #usual words
   notice_account_invalid_creditentials: User or Password Error
   successfully_updated: Successfully Updated
