--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -83,6 +83,7 @@ zh:
   down: 下移
   notice: 注意
   no_data: 无可用数据
+  label_alias: 别名
   #常用语句
   notice_account_invalid_creditentials: 用户名或密码错误
   successfully_updated: 已经成功更新数据
