--- a/config/locales/icm/en.yml
+++ b/config/locales/icm/en.yml
@@ -145,6 +145,7 @@ en:
   label_icm_incident_request_incident_status: Change Status
   label_icm_incident_request_upgrade: Upgrade
   label_icm_incident_status_edit_transform: Edit Status Transform
+  label_icm_incident_request_relation: Related Requests
   #========================= end icm incident_requests_controller=======================#
   #=========================    icm incident_journals_controller=======================#
   label_icm_incident_reply_support_group_id: Referred group
