--- a/config/locales/icm/zh.yml
+++ b/config/locales/icm/zh.yml
@@ -144,7 +144,7 @@ zh:
   error_icm_requested_by_can_not_blank: 请求人不能为空
   label_icm_incident_request_view_filter_data_range_all: 我相关的
   label_icm_incident_request_view_filter_data_range_main: 我参与的
-  label_icm_incident_request_relation: 相关问题
+  label_icm_incident_request_relation: 相关事故单
   #========================= end icm incident_requests_controller=======================#
   #=========================    icm incident_journals_controller=======================#
   label_icm_incident_reply_support_group_id: 转交组
