创建mail setting table and pages

--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1558,3 +1558,7 @@ zh:
   label_irm_rich_editor_win_tab_selected_file: 选择的图片
   label_irm_rich_editor_win_tab_upload_image: 上传图片
   #========================= end ======================
+
+  #========================= mail setting =========================
+
+  #========================= end ==================================
