--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1541,3 +1541,33 @@ en:
   label_irm_rich_editor_win_tab_selected_file: Selected image
   label_irm_rich_editor_win_tab_upload_image: Upload image
   #========================= end ======================
+
+  #========================= mail setting =========================
+  label_irm_mail_from_address: From Address
+  label_irm_mail_prefix: Email Prefix
+  label_irm_mail_protocol: Protocal
+  label_irm_mail_host_name: Host Name
+  label_irm_mail_smtp_port: SMTP Port
+  label_irm_mail_timeout: Timeout
+  label_irm_mail_tls: TLS
+  label_irm_mail_username: Username
+  label_irm_mail_password: Password
+  label_irm_mail_imap_port: POP/IMAP Port
+  label_irm_mail_setting: Email Server Configuration
+  label_irm_mail_edit_setting: Edit Email Server Configuration
+  label_irm_mail_smtp_server: SMTP Server
+  label_irm_mail_imap_server: POP/IMAP Server
+
+  label_irm_mail_imap_protocol_choose: Choose form IMAP, POP.
+  label_irm_mail_host_name_tip: Email server name.
+  label_irm_mail_imap_port_tip: The port to use to retrieve mail from your POP / IMAP account. Defaults are: POP-110; IMAP-143.
+  label_irm_mail_timeout_tip: Timeout (in milliseconds). 0 indicate infinite timeout.
+  label_irm_mail_imap_username_tip: The username used to authenticate your POP / IMAP account.
+  label_irm_mail_imap_password_tip: The password for your POP / IMAP account.
+
+  label_irm_mail_smtp_from_address_tip: The email address that outgoing mails will appear to have come from.
+  label_irm_mail_smtp_prefix_tip: The subject of emails sent from this server will use this string as a prefix. This is useful for your users so that they can filter their email.
+  label_irm_mail_smtp_port_tip: The port to use to send mail from your SMTP account. Defaults are: SMTP-25.
+  label_irm_mail_smtp_username_tip: The username used to authenticate your SMTP account.
+  label_irm_mail_smtp_password_tip: The password for your SMTP account.
+  #========================= end ==================================
