--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -141,6 +141,8 @@ en:
   error_file_upload_limit: File beyond the limit(Limit %{m} Kb, Now %{n} Kb)
   error_file_upload_limit_shot: File beyond the limit(Limit %{m} Kb, Now _ Kb)
   file_upload_limit_alert: File limit %{m} KB
+  by_name: By name
+  by_date: By date
   #=========================end usual custom=======================#
   #=========================    irm lookup_types_controller=======================#
   label_lookup_types: Lookup Type
