--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -131,6 +131,8 @@ zh:
   error_file_upload_limit: 附件大小超出限制(最大限制 %{m} KB, 现上传 %{n} KB)
   error_file_upload_limit_shot: 附件大小超出限制(最大限制 %{m} KB, 现上传 _ KB)
   file_upload_limit_alert: 最大尺寸 %{m} KB
+  by_name: 按名称
+  by_date: 按时间
   #=========================end usual custom=======================#
   #=========================    irm lookup_types_controller=====================#
   label_lookup_types: 快速编码类型
