feature: 调整邮件服务器配置界面，将用户名、密码、超时、服务器名称变为smtp、imap共有信息

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1559,6 +1559,7 @@ en:
   label_irm_mail_edit_setting: Edit Email Server Configuration
   label_irm_mail_smtp_server: SMTP Server
   label_irm_mail_imap_server: POP/IMAP Server
+  label_irm_mail_server: Mail Server
 
   label_irm_mail_imap_protocol_choose: Choose form IMAP, POP.
   label_irm_mail_host_name_tip: Email server name.
