--- a/config/locales/icm/zh.yml
+++ b/config/locales/icm/zh.yml
@@ -214,3 +214,9 @@ zh:
   label_icm_support_group_vendor_flag: 供应商组
   label_icm_support_group_add_group_notice: 请添加人员组
   #=========================  end icm support_groups =========================#
+  #========================= mail request ====================================
+  label_icm_mail_request: 邮件事故单规则
+  label_icm_mail_request_new: 创建邮件事故单规则
+  label_icm_mail_request_new: 编辑邮件事故单规则
+  label_icm_mail_request_info: 邮件事故单规则信息
+  #========================== end mail request ===============================
