--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1548,7 +1548,8 @@ en:
   label_irm_mail_from_address: From Address
   label_irm_mail_prefix: Email Prefix
   label_irm_mail_protocol: Protocal
-  label_irm_mail_host_name: Host Name
+  label_irm_mail_smtp_host_name: Send Server
+  label_irm_mail_imap_host_name: Receive Server
   label_irm_mail_smtp_port: SMTP Port
   label_irm_mail_timeout: Timeout
   label_irm_mail_tls: TLS
@@ -1562,12 +1563,13 @@ en:
   label_irm_mail_server: Mail Server
 
   label_irm_mail_imap_protocol_choose: Choose form IMAP, POP.
-  label_irm_mail_host_name_tip: Email server name.
+  label_irm_mail_imap_host_name_tip: POP/IMAP Email server.
   label_irm_mail_imap_port_tip: The port to use to retrieve mail from your POP / IMAP account. Defaults are： POP-110; IMAP-143.
   label_irm_mail_timeout_tip: Timeout (in milliseconds). 0 indicate infinite timeout.
   label_irm_mail_imap_username_tip: The username used to authenticate your POP / IMAP account.
   label_irm_mail_imap_password_tip: The password for your POP / IMAP account.
 
+  label_irm_mail_smtp_host_name_tip: SMTP Email server.
   label_irm_mail_smtp_from_address_tip: The email address that outgoing mails will appear to have come from.
   label_irm_mail_smtp_prefix_tip: The subject of emails sent from this server will use this string as a prefix. This is useful for your users so that they can filter their email.
   label_irm_mail_smtp_port_tip: The port to use to send mail from your SMTP account. Defaults are： SMTP-25.
