为编程报表添加数据导出为excel的功能

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -838,6 +838,7 @@ en:
   label_irm_report_list: Report List
   label_irm_report: Report
   label_irm_report_code: Code
+  label_irm_report_program: Report Program
   label_irm_report_name: Name
   label_irm_report_category_code: Category
   label_irm_report_status_code: Status
