--- a/config/locales/csi/zh.yml
+++ b/config/locales/csi/zh.yml
@@ -39,6 +39,7 @@ zh:
    label_csi_survey_joined_count: 参与人数
    label_csi_survey_person_count: 应参加人数
    label_csi_survey_created_at: 发起时间
+   label_csi_survey_created_by: 发起人
    label_csi_survey_result_only_author: 只允许作者查看调查结果
    label_csi_survey_with_incident_request: 在所有事故单中显示
    info_csi_survey_some_enabled_can_not_be_change: 已经有用户参与调查，导致该项不能被修改
