fixed: 将邮件事故单设置页面分为 邮件设置信息 和 事故默认信息 两部分

--- a/config/locales/icm/en.yml
+++ b/config/locales/icm/en.yml
@@ -218,5 +218,6 @@ en:
   label_icm_mail_request: Mail Request
   label_icm_mail_request_new: Create Mail Request
   label_icm_mail_request_new: Edit Mail Request
-  label_icm_mail_request_info: Mail Request Info
+  label_icm_mail_request_info: Mail Configuration Info
+  label_icm_mail_request_default_info: Request Info
   #========================== end mail request ===============================
