--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1430,6 +1430,7 @@ en:
 
    #======================= report_folder ====================
   label_irm_report_folder: Report Folder
+  label_irm_report_folder_all: All Folders
   label_irm_report_folder_new: New Report Folder
   label_irm_report_folder_create_new_folder: New Report Folder
   label_irm_report_folder_name: Name
