--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1422,6 +1422,7 @@ zh:
   #==================================================================
   #======================= report_folder ====================
   label_irm_report_folder: 报表文件夹
+  label_irm_report_folder_all: 全部文件夹
   label_irm_report_folder_new: 新建报表文件夹
   label_irm_report_folder_create_new_folder: 创建报表文件夹
   label_irm_report_folder_name: 名称
