--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -870,6 +870,8 @@ en:
   label_irm_report_new_custom: New Custom Report
   label_irm_report_new_program: New Program Report
   label_irm_report_apply_params: Apply Report Params
+  label_irm_report_chart_type: Chart Type
+  label_irm_report_record_count: Record Count
   #========================= end irm reports ===================================
   #========================= irm report column ===================================
   label_irm_report_setup_group_column_header: 设置数据列 分组
