--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -863,6 +863,8 @@ zh:
   label_irm_report_new_custom: 新建自定义报表
   label_irm_report_new_program: 新建编程报表
   label_irm_report_apply_params: 应用报表参数
+  label_irm_report_chart_type: 图表类型
+  label_irm_report_record_count: 记录数
   #========================= end irm reports ===================================
   #========================= irm report column ===================================
   label_irm_report_setup_group_column_header: 设置数据列 分组
