--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -865,6 +865,8 @@ zh:
   label_irm_report_apply_params: 应用报表参数
   label_irm_report_chart_type: 图表类型
   label_irm_report_record_count: 记录数
+  label_irm_report_params_config: 报表参数设置
+  label_irm_report_params_default_value: 参数默认值
   #========================= end irm reports ===================================
   #========================= irm report column ===================================
   label_irm_report_setup_group_column_header: 设置数据列 分组
