feature: 知识库首页增加树形菜单，选择栏目。 同时在entry header model中加入默认filter，对栏目权限进行底层过滤

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -143,6 +143,7 @@ en:
   file_upload_limit_alert: File limit %{m} KB
   by_name: By name
   by_date: By date
+  uncategory: Not classified
   #=========================end usual custom=======================#
   #=========================    irm lookup_types_controller=======================#
   label_lookup_types: Lookup Type
