--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -126,6 +126,7 @@ zh:
   label_skm_column_choice: 选择知识库分类
   label_skm_column_access: 分类访问权限
   label_skm_column_if_access_list_none: 如果没有限制可访问对象，则该公告对所有用户可见
+  label_skm_column_all: 全部分类
 
   #========================= skm columns ==========================================
   label_skm_channel: 频道
