添加事故单处理效率(按服务-状态统计)报表

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -273,3 +273,7 @@ en:
   label_uid_external_login: External System Login
   label_uid_login_mapping: System Login Mapping
   #=========end object meaning translate===================
+  #=========reports===================
+  label_average: Average
+  label_summary: Summay
+  #=========end reports===================
