fixed: 修正从事故单生成知识库时，没提交就保存的问题

--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -139,3 +139,5 @@ zh:
 
   label_skm_owned_channels: 已经拥有的频道
   label_skm_channel_management: 添加频道
+
+  label_action_new_from_icm_request: 从事故单创建知识库文章
