--- a/config/locales/skm/en.yml
+++ b/config/locales/skm/en.yml
@@ -137,3 +137,5 @@ en:
 
   label_skm_owned_channels: Owned Channels
   label_skm_channel_management: Management Channels
+
+  label_action_new_from_icm_request: Create Knowledge From Incident Request
