feature: 在知识库频道查看页面中，加入组管理功能

--- a/config/locales/skm/en.yml
+++ b/config/locales/skm/en.yml
@@ -137,5 +137,6 @@ en:
 
   label_skm_owned_channels: Owned Channels
   label_skm_channel_management: Management Channels
+  label_skm_channel_group_management: Management Groups
 
   label_action_new_from_icm_request: Create Knowledge From Incident Request
