--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -142,3 +142,6 @@ zh:
   label_skm_channel_group_management: 添加组
 
   label_action_new_from_icm_request: 从事故单创建知识库文章
+
+  button_skm_entry_header_new: 新建知识库文章
+  tip_skm_entry_header_full_search: 搜索知识库文章标题、内容，按“回车”键开始搜索...
