fixed: 修正知识库首页全文检索后，发布日期不显示的问题

--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -143,5 +143,5 @@ zh:
 
   label_action_new_from_icm_request: 从事故单创建知识库文章
 
-  button_skm_entry_header_new: 新建知识库文章
+  button_skm_entry_header_new: 新建知识
   tip_skm_entry_header_full_search: 搜索知识库文章标题、内容，按“回车”键开始搜索...
