--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -137,6 +137,7 @@ zh:
   label_skm_channel_list: 频道列表
   label_skm_channel_name: 频道名称
   label_skm_channel_description: 描述
+  label_skm_channel_column: 知识分类
 
   label_skm_owned_channels: 已经拥有的频道
   label_skm_channel_management: 添加频道
