--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -730,7 +730,7 @@ zh:
   label_irm_person_role: 角色
   label_irm_person_access_system: 可访问系统
   label_irm_person_add_to_company: 加入公司
-  label_irm_person_add_to_system: 加入外部系统
+  label_irm_person_add_to_system: 加入应用系统
   label_irm_person_password_info: 设置密码
   error_irm_person_new_old_password_same: 新密码不能和旧密码相同
   #=========================end irm people_controller=======================#
@@ -1527,19 +1527,19 @@ zh:
 
 
   #=========================    irm external_systems_controller=======================#
-  label_irm_external_system_member: 外部系统成员
-  label_irm_external_system_list: 外部系统列表
-  label_irm_external_system_new:  新建外部系统
-  label_irm_external_system_edit: 编辑外部系统
+  label_irm_external_system_member: 应用系统成员
+  label_irm_external_system_list: 应用系统列表
+  label_irm_external_system_new:  新建应用系统
+  label_irm_external_system_edit: 编辑应用系统
   label_irm_external_system_external_system_code: 系统编码
   label_irm_external_system_system_name: 系统名称
   label_irm_external_system_system_description: 描述
   label_irm_external_system_external_hostname: 主机名
   label_irm_external_system_external_ip_address: IP地址
   label_irm_external_system_status_meaning: 记录状态
-  label_irm_external_system:  外部系统
-  label_irm_external_system_info: 外部系统信息
-  label_irm_external_system_select_system: 选择加入的外部系统
+  label_irm_external_system:  应用系统
+  label_irm_external_system_info: 应用系统信息
+  label_irm_external_system_select_system: 选择加入的应用系统
   label_irm_external_system_people: 系统人员
   label_irm_external_system_people_type: 类型
   label_irm_external_system_add_people: 添加成员
