--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -1,17 +1,17 @@
 zh:
   skm: "skm"
   #========================entry statuses=====================================
-  label_skm_entry_status: 知识库文章状态
+  label_skm_entry_status: 知识文章状态
   label_skm_entry_status_name: 状态名称
   label_skm_entry_status_description: 状态描述
   label_skm_entry_status_visiable: 可见
-  label_skm_entry_status_new: 创建知识库文章状态
-  label_skm_entry_status_edit: 修改知识库文章状态
+  label_skm_entry_status_new: 创建知识文章状态
+  label_skm_entry_status_edit: 修改知识文章状态
   label_skm_entry_status_code: 状态编码
-  label_skm_entry_status_list: 知识库文章状态列表
+  label_skm_entry_status_list: 知识文章状态列表
 
   #========================entry templates===============================
-  label_skm_entry_template: 知识库文章模板
+  label_skm_entry_template: 知识文章模板
   label_skm_entry_template_name: 模板名称
   label_skm_entry_template_description: 模板描述
   label_skm_entry_template_list: 模板列表
@@ -37,10 +37,10 @@ zh:
   #=========================entry headers================================
   label_skm: 知识库
   label_skm_entry_header_index: 首页
-  label_skm_entry_header: 知识库文章
-  label_skm_entry_header_list: 知识库文章列表
-  label_skm_entry_header_new: 创建知识库文章
-  label_skm_entry_header_edit: 编辑知识库文章
+  label_skm_entry_header: 知识文章
+  label_skm_entry_header_list: 知识文章列表
+  label_skm_entry_header_new: 创建知识文章
+  label_skm_entry_header_edit: 编辑知识文章
   label_skm_entry_header_title: 标题
   label_skm_entry_header_keyword_tags: 关键字
   label_skm_entry_header_version: 文档版本
@@ -48,14 +48,14 @@ zh:
   label_skm_entry_header_status_code: 文档状态
   label_skm_entry_header_published_date: 发布日期
   label_skm_entry_header_history_list: 历史版本列表
-  notice_skm_entry_step_1_desc: 选择一个知识库文章模板，模板将决定随后创建的文章结构。
+  notice_skm_entry_step_1_desc: 选择一个知识文章模板，模板将决定随后创建的文章结构。
   notice_skm_entry_step_2_desc: 根据步骤1中所选模板的结构，填入文章内容
   notice_skm_entry_step_3_desc: 为文章添加附件
-  notice_skm_entry_header_choice_template: 选择知识库模板
+  notice_skm_entry_header_choice_template: 选择知识模板
   notice_skm_entry_header_input_content: 输入文章内容
   notice_skm_entry_header_subject_and_att: 选择附件
-  label_skm_entry_header_attachments: 知识库附件
-  notice_skm_entry_header_preview_entry: 预览知识库文章
+  label_skm_entry_header_attachments: 知识附件
+  notice_skm_entry_header_preview_entry: 预览知识文章
   label_skm_entry_header_search_by_title: 搜索文章
   label_skm_entry_header_my_favorites: 我的收藏
   label_skm_entry_header_my_favorites_list: 我收藏的文章列表
@@ -117,14 +117,14 @@ zh:
   label_skm_rpt_apply_history: 事故单应用知识库分析报表
 
   #========================= skm columns ==========================================
-  label_skm_column: 知识库分类
+  label_skm_column: 知识分类
   label_skm_column_code: 分类编码
   label_skm_column_parent: 父类
   label_skm_column_new: 创建分类
   label_skm_column_edit: 编辑分类
-  label_skm_column_list: 知识库分类列表
+  label_skm_column_list: 知识分类列表
   label_skm_column_new_child: 创建子分类
-  label_skm_column_choice: 选择知识库分类
+  label_skm_column_choice: 选择知识分类
   label_skm_column_access: 分类访问权限
   label_skm_column_if_access_list_none: 如果没有限制可访问对象，则该公告对所有用户可见
   label_skm_column_all: 全部分类
@@ -143,7 +143,7 @@ zh:
   label_skm_channel_management: 添加频道
   label_skm_channel_group_management: 添加组
 
-  label_action_new_from_icm_request: 从事故单创建知识库文章
+  label_action_new_from_icm_request: 从事故单创建知识文章
 
   button_skm_entry_header_new: 新建知识
   tip_skm_entry_header_full_search: 搜索知识库文章标题、内容...
